# armv8_5_CProject

./: .gitignore  CMakeLists.txt  emulate
doc/: Checkpoint.tex  Report.tex
extension/: snake.c
programs/: kernel8.img  led_blink.s  led_blink_old.s
src/: Makefile  add02.s  add1.s  assemble.c  assemble.h  branch.c  branch.h  branching.c  branching.h  data_processing.c  data_processing.h  denary_to_binary.c  denary_to_binary.h  emulate.c  emulate_tests.c  function_decoder.c  function_decoder.h  hex_to_binary.c  hex_to_binary.h  passing.c  passing.h  reading_source_file.c  reading_source_file.h  shifts.c  shifts.h  single_data_transfer.c  single_data_transfer.h  symbol_table.c  symbol_table.h  test.s  truncate.c  truncate.h  utility.c  utility.h
src/assembler/: assemble.c  assemble.h  branch.c  data_processing.c  passing.c  reading_source_file.c  shifts.c  single_data_transfer.c  test.s  utility.c
src/emulator/: arithmetic.c  arithmetic.h  binary_functions.c  binary_functions.h  binary_helpers.c  dp_immediate.c  dp_immediate.h  dp_register.c  dp_register.h  emulate.c  emulate.h  emulate_branch.c  emulate_branch.h  emulate_shifts.c  emulate_shifts.h  emulate_tests.c  file_helpers.c  load_or_store.c  load_or_store.h  read_binary_file.c  read_binary_file.h  structures.c  structures.h  tests.c
